# gus.mb

./: .gitignore  CMakeLists.txt  README.md
Core/: AbuttingInterface.cpp  AbuttingInterface.h  AuxiliaryCell.h  BC.cpp  BC.h  BCCopy.cpp  BCCopy.h  BCEnforce2D.cpp  BCEnforce2D.h  BCExtrapolate.cpp  BCExtrapolate.h  BCFix.cpp  BCFix.h  BCForcePull.cpp  BCForcePull.h  BCFunctors.cpp  BCFunctors.h  BCInletTotal.cpp  BCInletTotal.h  BCInletTotalMassFlow.cpp  BCInletTotalMassFlow.h  BCInviscidWall.cpp  BCInviscidWall.h  BCOutletStaticPressure.cpp  BCOutletStaticPressure.h  BCPlanar.cpp  BCPlanar.h  BCPlanarLocal.cpp  BCPlanarLocal.h  BCRotatingViscousWall.cpp  BCRotatingViscousWall.h  BCSymmetry.cpp  BCSymmetry.h  BCViscousWall.cpp  BCViscousWall.h  BLMesh.cpp  BLMesh.h  Basket.h  BitmapMeshInterpolator.cpp  BitmapMeshInterpolator.h  (+118 more)
Docs/: BoundaryCells.fig  BoundaryConditions.tex  GoverningEquations.tex  IndexingConvention.fig  Makefile  Scheme.tex  TurbulenceModels.tex  ViscousFlux.fig
IO/: ApplyGenericPeriodicity.py  ApplyIGGBCs.py  ApplyPeriodicity.py  CGNS.i  CGNSFile.py  CGNSFuncs.cpp  CGNSFuncs.h  CGNSMeshReader.cpp  CGNSMeshReader.h  CGNSReader.cpp  CGNSReader.h  CGNSWriter.cpp  CGNSWriter.h  CMakeLists.txt  ConvertCGNSToPLOT3D.cpp  DumpCGNS.py  ExportToVTK.py  GenerateBCs.py  IGGBCS.py  Launch  LoadBalance.py  MakeChannel.py  MeshReader.h  P  PLOT3DFunctionWriter.h  PLOT3DMeshReader.cpp  PLOT3DMeshReader.h  PLOT3DMeshWriter.cpp  PLOT3DMeshWriter.h  PLOT3DSolutionWriter.cpp  PLOT3DSolutionWriter.h  Partitioner.py  PatchSelectionPanel.py  Periodicity.py  Periodicity.test.py  PeriodicityUtils.py  PointRange.py  Pre  Pre.py  Roster.py  (+8 more)
Python/: CMakeLists.txt  MPI.i  MPIFuncs.cpp  MPIFuncs.h
Tests/: CMakeLists.txt  SimpleSolver.cpp  Solver.cpp  TestAbuttingInterface.cpp  TestConnectivity1to1.cpp  TestConnectivity1to1Periodicity.cpp
Tests/Blunt/: Blunt.glf  Blunt.in
Tests/DCA/: CalculatePoints.py  DCA.in  Mesh.glf
Tests/LS89/: LS89.in  LS89.periodicity  Mesh.glf  Mesh2.glf
Tests/M-1-Nozzle/: M-1-Nozzle.in
Tests/M-1-Nozzle/Mesh/: AutoGrid5Script.py  M-1-Nozzle.trb  MakeGeomTurbo.py  Makefile
Tests/M-1-Stage/: M-1-Stage.in
Tests/M-1-Stage-Unsteady/: M-1-Stage-Unsteady.in  MakeVTMs.py
Tests/M-1-Stage/Mesh/: AutoGrid5Script.py  M-1-Stage.trb  MakeGeomTurbo.py  template.geomTurbo  template.row.geomTurbo
Tests/M-1-Stage/Mesh_Fine/: M-1-Stage-Fine.trb
Tests/RampMB/: README  RampMB.glf  RampMB.in
cmake/Modules/: FindANN.cmake  FindCGNS.cmake
